{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 177,
  "lineage": "67604d8e-374b-12df-6468-520cb3c6e938",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:765288911542:internet-gateway/igw-0290fbbb4cfa281e7",
            "id": "igw-0290fbbb4cfa281e7",
            "owner_id": "765288911542",
            "tags": {
              "Name": "braintrust-igw"
            },
            "tags_all": {
              "Name": "braintrust-igw"
            },
            "vpc_id": "vpc-0990922ea07edddb3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:765288911542:route-table/rtb-06f73070fab67e8b8",
            "id": "rtb-06f73070fab67e8b8",
            "owner_id": "765288911542",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0290fbbb4cfa281e7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "braintrust-public-rt"
            },
            "tags_all": {
              "Name": "braintrust-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0990922ea07edddb3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c1d78180f126760",
            "route_table_id": "rtb-06f73070fab67e8b8",
            "subnet_id": "subnet-00cf81235635b0afd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086943930d8d44aa9",
            "route_table_id": "rtb-06f73070fab67e8b8",
            "subnet_id": "subnet-0fab7dad45568b580"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:765288911542:security-group/sg-04cf43f00721beeb8",
            "description": "Security group for Lambda function",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04cf43f00721beeb8",
            "ingress": [],
            "name": "braintrust-lambda-sg",
            "name_prefix": "",
            "owner_id": "765288911542",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "braintrust-lambda-sg"
            },
            "tags_all": {
              "Name": "braintrust-lambda-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0990922ea07edddb3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:765288911542:subnet/subnet-00cf81235635b0afd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cf81235635b0afd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "765288911542",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "braintrust-public-subnet-a"
            },
            "tags_all": {
              "Name": "braintrust-public-subnet-a"
            },
            "vpc_id": "vpc-0990922ea07edddb3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:765288911542:subnet/subnet-0fab7dad45568b580",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fab7dad45568b580",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "765288911542",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "braintrust-public-subnet-b"
            },
            "tags_all": {
              "Name": "braintrust-public-subnet-b"
            },
            "vpc_id": "vpc-0990922ea07edddb3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:765288911542:vpc/vpc-0990922ea07edddb3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02b7e32fc4eab19ae",
            "default_route_table_id": "rtb-0d24420898622e589",
            "default_security_group_id": "sg-0f55d898ae906cd5a",
            "dhcp_options_id": "dopt-093b23d68bb6af530",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0990922ea07edddb3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d24420898622e589",
            "owner_id": "765288911542",
            "tags": {
              "Name": "braintrust-vpc"
            },
            "tags_all": {
              "Name": "braintrust-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}